--- a/src/main/webapp/partials/users.html
+++ b/src/main/webapp/partials/users.html
@@ -2,17 +2,15 @@
 
     <h3>Users list</h3>
 
+    <div class="form-group">
+        <div class="input-group">
+            <span class="input-group-addon glyphicon glyphicon-search"></span>
+            <input type="text" id="addon3a" class="form-control" placeholder="Search for" ng-model="query">
+        </div>
+    </div>
+
 
     <div id="userList" >
-        <div class="input-group">
-            <input class="form-control" id="search" name="search" placeholder="Search for" ng-model="query"
-                   required="required"/>
-              <span class="input-group-btn">
-                  <button type="submit" class="btn btn-default">
-                      <i class="glyphicon glyphicon-search"></i>
-                  </button>
-              </span>
-        </div>
         <div class="list-group">
             <div class="list-group-item">
                 <div ng-repeat="user in users | filter:query" class="list-group-item" style="margin-top:16px">
