fix :security config, access tokens authority

--- a/src/main/webapp/partials/home.html
+++ b/src/main/webapp/partials/home.html
@@ -17,11 +17,11 @@
             <blockquote style="margin-left: 16px">
                 <p>This is a demo project for securing an Angularjs project with Spring-security.</p>
 
-                <p>For more information and details you can read my Wordpress post at this <a
-                        href="http://wp.me/pTO1H-150" target="_blank">link</a>.</p>
+                <p>For more information and details you can read my Wordpress post <a
+                        href="http://wp.me/pTO1H-150" target="_blank">here</a>.</p>
 
-                <p>The source code of the project is available on GitHub at this <a
-                        href="https://github.com/samer-abdelkafi/ssng-project" target="_blank">link</a>.</p>
+                <p>The source code of the project is available on GitHub <a
+                        href="https://github.com/samer-abdelkafi/ssng-project" target="_blank">here</a>.</p>
 
                 <p>This demo uses the open source frameworks and projects below:</p>
             </blockquote>
